--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <section id="momentos" class="reveal">
       <div class="card">
         <h2>Nuestros momentitos 📸</h2>
-        <p>Puedes reemplazar las fotos por las tuyas. Solo toca cada imagen y elige la foto desde tu celular.</p>
+        <p>nuestros recuerdos.</p>
         <div class="grid" id="galeria">
           <!-- Placeholders con input file encima para cambiar desde el móvil -->
           <label class="ph"><img src="https://images.unsplash.com/photo-1516542076529-1ea3854896e1?q=80&w=800&auto=format&fit=crop" alt="Recuerdo 1"><input type="file" accept="image/*" hidden></label>
